@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/rsync
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.87 2006/03/30 15:08:23 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.88 2006/04/08 00:51:46 vapier Exp $
+
+*rsync-2.6.7-r1 (08 Apr 2006)
+
+  08 Apr 2006; Mike Frysinger <vapier@gentoo.org> -rsync-2.6.7.ebuild,
+  +rsync-2.6.7-r1.ebuild:
+  Fix acl/xattr configure options #129116 by Alexander Skwar.
 
   30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> rsync-2.6.7.ebuild:
   Add ~x86-fbsd keyword.
